# wpsr

./: CMakeLists.txt
include/: header.h
source/: findAntecedents.cpp  main.cpp  relatedFunctions.cpp  suggest.cpp  tkk.cpp
